adding media pref

--- a/choose/templates/choose/image.html
+++ b/choose/templates/choose/image.html
@@ -30,7 +30,7 @@
          <li class="nav-item">
            <a class="nav-link" href="{% url 'process_form' %}">Upload</a>
          </li>
-         
+
 
        </ul>
      </div>
@@ -46,7 +46,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                  <img class="card-img-top" src="{{ image_detail.image.url }}" alt="Card image cap">
+                  <img class="card-img-top" src="{% get_media_prefix %}{{ image_detail.image.url }}" alt="Card image cap">
                   <div class="card-body">
                       <p class="card-text">Name: {{image_detail.display_data}}</p>
 
