--- a/choose/templates/choose/home.html
+++ b/choose/templates/choose/home.html
@@ -53,7 +53,7 @@
             {% for image in images.all %}
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="{{ image.image.url }}" alt="Card image cap">
+                <img class="card-img-top" src="{% get_media_prefix %}{{ image.image.url }}" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text">{{ image.name }}</p>
                   <div class="d-flex justify-content-between align-items-center">
