--- a/choose/templates/choose/image.html
+++ b/choose/templates/choose/image.html
@@ -36,7 +36,7 @@
      </div>
    </nav>
     </header>
-
+    {% load static %}
           <h1 class="text-center pt-4">Image Analysis</h1>
 
           <hr />
